新增下載圖檔功能，以便用手機寫程式

--- a/hex_circle_part_full_pin_correct.html
+++ b/hex_circle_part_full_pin_correct.html
@@ -137,6 +137,10 @@ console.log(vertices_pin[2][0]);
         drawPin();
         
     </script>
+	
+<a href="" onclick="this.href=myCanvas.toDataURL('image/png');" download>另存圖檔</a>
+	
 </body>
 
 </html>
+
